--- a/serverless.yml
+++ b/serverless.yml
@@ -18,3 +18,9 @@ functions:
       - http:
           method: get
           path: hello
+  helloWithException:
+    handler: handler.helloWithException
+    events:
+      - http:
+          method: get
+          path: hello-with-exception
