--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "pg": "^7.15.1"
+  },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
     "@types/node": "^8.0.57",
