--- a/package.json
+++ b/package.json
@@ -4,20 +4,49 @@
   "description": "Serverless webpack example using Typescript",
   "main": "handler.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "dependencies": {
     "pg": "^7.15.1"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.17",
+    "@types/jest": "^24.0.24",
     "@types/node": "^8.0.57",
+    "aws-lambda-mock-context": "^3.2.1",
+    "jest": "^24.9.0",
     "serverless": "^1.60.0",
     "serverless-webpack": "^5.1.1",
     "source-map-support": "^0.5.6",
+    "ts-jest": "^24.2.0",
     "ts-loader": "^4.2.0",
     "typescript": "^2.9.2",
     "webpack": "^4.5.0"
+  },
+  "jest": {
+    "globals": {
+      "ts-jest": {}
+    },
+    "transform": {
+      "^.+\\.(ts|tsx)$": "ts-jest"
+    },
+    "testURL": "http://localhost/",
+    "testRegex": "(/__tests__/.*|(\\.|/)(test|spec))\\.(ts?|jsx?|tsx?)$",
+    "modulePathIgnorePatterns": [
+      "/__tests__/test_helpers/*"
+    ],
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ],
+    "collectCoverage": true,
+    "collectCoverageFrom": [
+      "src/**/*.ts"
+    ]
   },
   "author": "The serverless webpack authors (https://github.com/elastic-coders/serverless-webpack)",
   "license": "MIT"
